--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
   spark-master:
     build: .
     container_name: spark-master
-    # Usamos spark-class directamente para evitar que el contenedor se apague
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
     ports:
-      - "8080:8080" # UI Web
-      - "7077:7077" # Puerto Spark
+      - "8080:8080"
+      - "7077:7077"
     environment:
       - SPARK_NO_DAEMONIZE=true
+    volumes:
+      -  ./data:/app/data  # 👈 CLAVE
 
   # --- NODO 2: WORKER ---
   spark-worker:
     build: .
     container_name: spark-worker
-    # Vinculamos al master usando su nombre de servicio
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
       - spark-master
@@ -25,14 +25,16 @@ services:
       - SPARK_WORKER_CORES=2
       - SPARK_WORKER_MEMORY=2G
       - SPARK_NO_DAEMONIZE=true
+    volumes:
+      - ./data:/app/data # 👈 CLAVE
 
   # --- NODO 3: JUPYTER LAB ---
   jupyter-lab:
     build: .
     container_name: jupyter-lab
     ports:
-      - "8888:8888" # Acceso al notebook
-      - "4040:4040" # Monitor de Jobs
+      - "8888:8888"
+      - "4040:4040"
     volumes:
       - ./data:/app/data
       - ./notebooks:/app/notebooks
